added initial arduino

--- a/GWAS/editors/hapmapLinkImpute.ipynb
+++ b/GWAS/editors/hapmapLinkImpute.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "parliamentary-retro",
+   "id": "civic-jewel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,20 +14,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moved-monroe",
+   "id": "lightweight-palace",
    "metadata": {},
    "source": [
     "# LinkImpute\n",
-    "Download from: http://www.cultivatingdiversity.org/software.html \\\n",
-    "Citation: https://www.g3journal.org/content/5/11/2383 \\\n",
-    "To run: java -jar LinkImpute.jar -v numeric.array imputed.array \\ \n",
+    "Download from: http://www.cultivatingdiversity.org/software.html\n",
+    "\n",
+    "Citation: https://www.g3journal.org/content/5/11/2383\n",
+    "\n",
+    "To run: java -jar LinkImpute.jar -v numeric.array imputed.array\n",
     "\n",
     "TODO: Add a small sample hapmap file for reference"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "creative-aviation",
+   "id": "positive-terrain",
    "metadata": {},
    "source": [
     "# Convert hapmap file to LinkImpute numeric array and back"
@@ -36,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nearby-mapping",
+   "id": "interested-retirement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,21 +51,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suspected-pharmacology",
+   "id": "compliant-litigation",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Keep only allele pairs of interest\n",
     "df = df[df[\"alleles\"].isin([\"A/T\", \"A/G\", \"A/C\",\n",
     "                            \"T/A\", \"T/G\", \"T/C\",\n",
-    "                            \"G/A\", \"G/T\", \"G/A\",\n",
-    "                            \"C/A\", \"C/G\", \"C/T\"])]"
+    "                            \"G/C\", \"G/T\", \"G/A\",\n",
+    "                            \"C/A\", \"C/G\", \"C/T\"])]\n",
+    "# To see if any allele did not pass use: \"C/A\", \"C/G\", \"C/T\"]) == False] "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "treated-virgin",
+   "id": "narrow-bacon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mighty-michigan",
+   "id": "employed-climate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affected-assault",
+   "id": "russian-liverpool",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +106,7 @@
     "df = pd.read_csv(\"hapmap.txt\", sep=\"\\t\")\n",
     "df = df[df[\"alleles\"].isin([\"A/T\", \"A/G\", \"A/C\",\n",
     "                            \"T/A\", \"T/G\", \"T/C\",\n",
-    "                            \"G/A\", \"G/T\", \"G/A\",\n",
+    "                            \"G/C\", \"G/T\", \"G/A\",\n",
     "                            \"C/A\", \"C/G\", \"C/T\"])]\n",
     "df.iloc[:,11:] = imp.T"
    ]
@@ -111,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opened-momentum",
+   "id": "respiratory-austria",
    "metadata": {},
    "outputs": [],
    "source": [
