add GeneID2symbol in phylogeny

--- a/GWAS/editors/hapmapLinkImpute.ipynb
+++ b/GWAS/editors/hapmapLinkImpute.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "civic-jewel",
+   "id": "scenic-adams",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lightweight-palace",
+   "id": "corresponding-place",
    "metadata": {},
    "source": [
     "# LinkImpute\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "positive-terrain",
+   "id": "expressed-differential",
    "metadata": {},
    "source": [
     "# Convert hapmap file to LinkImpute numeric array and back"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interested-retirement",
+   "id": "wrong-polymer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compliant-litigation",
+   "id": "incorporated-adaptation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrow-bacon",
+   "id": "nervous-istanbul",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "employed-climate",
+   "id": "periodic-attraction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,38 +97,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "russian-liverpool",
+   "id": "rocky-venture",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read the LinkUmpute output and put it back together with the original hapmap file \n",
-    "imp = pd.read_csv(\"imputed.array\", sep=\"\\t\", header=None)\n",
+    "imp = pd.read_csv(\"imputed.array\", sep=\"\\t\", header=None).T\n",
     "df = pd.read_csv(\"hapmap.txt\", sep=\"\\t\")\n",
     "df = df[df[\"alleles\"].isin([\"A/T\", \"A/G\", \"A/C\",\n",
     "                            \"T/A\", \"T/G\", \"T/C\",\n",
     "                            \"G/C\", \"G/T\", \"G/A\",\n",
     "                            \"C/A\", \"C/G\", \"C/T\"])]\n",
-    "df.iloc[:,11:] = imp.T"
+    "df = df.reset_index(drop=True)\n",
+    "df.iloc[:,11:] = imp\n",
+    "columns = df.columns # not sure why column names are deleted later\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-austria",
+   "id": "bored-steal",
    "metadata": {},
    "outputs": [],
    "source": [
     "#After imputation reverse the numeric format to allelic to load hapmap file in TASSEL\n",
     "def to_allelic(row):\n",
     "    row_list = row.tolist()\n",
-    "    print(row_list)\n",
     "    # Convert the left allele to 0, right to 1, and missing to -1\n",
     "    allele_dict = {0: row_list[1][0], 1: row_list[1][-1]}\n",
-    "    row_list[11:] = [allele_dict[allele] for allele in row_list[4:]]\n",
+    "    row_list[11:] = [allele_dict[allele] for allele in row_list[11:]]\n",
     "    return pd.Series(row_list)\n",
     "\n",
-    "# Apply function to each row to regenrate the hapmap file\n",
-    "df.head().apply(to_allelic, axis=1)"
+    "hmp = df.apply(to_allelic, axis=1)\n",
+    "hmp.columns = columns\n",
+    "hmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "valued-farmer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hmp.to_csv(\"hapmap.impt.hmp.txt\", sep=\"\\t\", index=False, header=True)"
    ]
   }
  ],
