add ENA file report parser

--- a/RNAseq/public/ENA_file_reports.ipynb
+++ b/RNAseq/public/ENA_file_reports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dbb553e9",
    "metadata": {},
    "outputs": [],
@@ -13,24 +13,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "0915535c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Based on the EBI ENA tutorial on accessing their data\n",
-    "# https://ena-docs.readthedocs.io/en/latest/retrieval/programmatic-access/file-reports.html\n",
+    "def get_reports(acc):\n",
+    "    # Based on the EBI ENA tutorial on accessing their data\n",
+    "    # https://ena-docs.readthedocs.io/en/latest/retrieval/programmatic-access/file-reports.html\n",
+    "    # Change Study Accession (PRJNAXXXXXX) to get the \n",
+    "    # Change \"fields=all\" to get all columns in the metadata table\n",
+    "    res = \"read_run\"\n",
+    "    fie = \"study_accession,tax_id,scientific_name,instrument_model,library_strategy,read_count,run_alias,sample_alias,fastq_ftp,fastq_md5\"\n",
     "\n",
-    "# Change Study Accession (PRJNAXXXXXX) to get the \n",
-    "# Change \"fields=all\" to get all columns in the metadata table\n",
-    "acc = \"PRJNAXXXXXX\"\n",
-    "res = \"read_run\"\n",
-    "fie = \"study_accession,tax_id,scientific_name,instrument_model,library_strategy,read_count,run_alias,fastq_ftp,fastq_md5\"\n",
-    "\n",
-    "# Generate the url that will containt the study accession information once opened\n",
-    "url=\"https://www.ebi.ac.uk/ena/portal/api/filereport?accession={0}&result={1}&fields={2}\".format(acc, res, fie)\n",
-    "# Open the URL with pandas and load it as a dataframe\n",
-    "pd.read_csv(url, sep=\"\\t\")"
+    "    # Generate the url that will containt the study accession information once opened\n",
+    "    url=\"https://www.ebi.ac.uk/ena/portal/api/filereport?accession={0}&result={1}&fields={2}\".format(acc, res, fie)\n",
+    "    # Open the URL with pandas and load it as a dataframe\n",
+    "    return pd.read_csv(url, sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "30e9a298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accession_list = [\"PRJNAXXXXX1\", \"PRJNAXXXXX2\", \"PRJNAXXXXX3\"]\n",
+    "complete_df = pd.DataFrame()\n",
+    "for accession in accession_list:\n",
+    "    complete_df = pd.concat([complete_df, get_reports(accession)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "31dd49bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complete_df.to_csv(\"complete_df.tsv\", sep=\"\\t\")"
    ]
   }
  ],
