--- a/genomes/Promoters/promoter_extractor.ipynb
+++ b/genomes/Promoters/promoter_extractor.ipynb
@@ -43,8 +43,8 @@
     "longest = None\n",
     "TSS     = None\n",
     "\n",
-    "# Test just the first 100 lines un the GFF3 files\n",
-    "for index, row in gff.iloc[:100].iterrows():\n",
+    "# Test just the first 100 lines (.iloc[:100]) in the GFF3 files\n",
+    "for index, row in gff.iterrows():\n",
     "    gff3_name = row[8]\n",
     "    \n",
     "    if row[2] == \"gene\":\n",
@@ -71,7 +71,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -85,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
