--- a/coexpression/combining_coexpression_network.ipynb
+++ b/coexpression/combining_coexpression_network.ipynb
@@ -1,24 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "lonely-baseball",
-   "metadata": {},
-   "source": [
-    "# Merging Multiple Networks\n",
-    "In this case I have a couple networks that are composed on a large number of relatively small connected components.\\\n",
-    "The goal of the scripts below is to load these separate networks and combine them together into a single network.\\\n",
-    "If we don't care about connected components and just want to combine non-redundant edges then we can use python.\\\n",
-    "Otherwise, networkx has some useful functions to handle these coexpression networks.\n",
-    "\n",
-    "P.S.\\\n",
-    "This analysis didn't yield particularly useful results for me."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mounted-flush",
+   "id": "immediate-subdivision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,16 +13,77 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complete-doctor",
+   "id": "encouraging-deadline",
    "metadata": {},
    "source": [
-    "# NetworkX implementation"
+    "# Merging Multiple Networks\n",
+    "A more directed approach using a list of genes of interests could yield results that are easier to interpert."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "classical-travel",
+   "metadata": {},
+   "source": [
+    "# 1. Combining all networks and keeping edges between selected nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "excellent-frost",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nx' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-3aafc4fa5335>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfile_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"network1.tsv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"network2.tsv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"network3.tsv\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mGlist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_edgelist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"\\t\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"mr\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfl\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfile_list\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mGcomb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompose_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mGlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Combined network nodes and edges before filtering:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mGcomb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mGcomb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0medges\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-1-3aafc4fa5335>\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mfile_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"network1.tsv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"network2.tsv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"network3.tsv\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mGlist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_edgelist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"\\t\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"mr\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mfl\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfile_list\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mGcomb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompose_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mGlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Combined network nodes and edges before filtering:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mGcomb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mGcomb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0medges\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nx' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "file_list = [\"network1.tsv\", \"network2.tsv\", \"network3.tsv\"] \n",
+    "Glist = [nx.read_edgelist(fl, delimiter=\"\\t\", data=[(\"mr\", float,)]) for fl in file_list]\n",
+    "Gcomb = nx.compose_all(Glist)\n",
+    "print(\"Combined network nodes and edges before filtering:\", len(Gcomb.nodes), len(Gcomb.edges))\n",
+    "\n",
+    "keep_set = set(pd.read_csv(\"genes_to_keep.txt\")[\"GeneIDs\"].tolist())\n",
+    "Gcomb = Gcomb.subgraph(keep_set)\n",
+    "print(\"Combined network nodes and edges before filtering:\", len(Gcomb.nodes), len(Gcomb.edges))\n",
+    "\n",
+    "nx.write_edgelist(Gcomb, \"Gcomb_selected_nodes.edgelist\", comments='#', delimiter='\\t', data=False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "complete-constitution",
+   "metadata": {},
+   "source": [
+    "# Merging Multiple Networks\n",
+    "In this case I have a couple networks that are composed on a large number of relatively small connected components.\\\n",
+    "The goal of the scripts below is to load these separate networks and combine them together into a single network.\\\n",
+    "If we don't care about connected components and just want to combine non-redundant edges then we can use python.\\\n",
+    "Otherwise, networkx has some useful functions to handle these coexpression networks."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "criminal-guatemala",
+   "metadata": {},
+   "source": [
+    "# 2. Combining Filtered Connected Components - NetworkX implementation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compliant-spectacular",
+   "id": "leading-appraisal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "scheduled-montgomery",
+   "id": "processed-blackjack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,16 +131,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nuclear-parts",
+   "id": "atomic-albania",
    "metadata": {},
    "source": [
-    "# Pandas implementation"
+    "# 2. Combining Filtered Connected Components - Pandas implementation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "senior-penny",
+   "id": "crude-warrant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twelve-result",
+   "id": "common-sense",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +179,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "verified-content",
+   "id": "static-duration",
    "metadata": {},
    "source": [
-    "# Other not-so-helpful NetworkX code (that works)"
+    "# 3. Other not-so-helpful NetworkX code (that works)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "three-cedar",
+   "id": "following-matter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "another-issue",
+   "id": "israeli-nigeria",
    "metadata": {},
    "outputs": [],
    "source": [
