Update SSP finder and add the Diamond-top-hit code line

--- a/domains/SSP_finder.ipynb
+++ b/domains/SSP_finder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "separated-cleveland",
    "metadata": {},
    "outputs": [],
@@ -20,10 +20,107 @@
   },
   {
    "cell_type": "markdown",
+   "id": "09ea4998",
+   "metadata": {},
+   "source": [
+    "# Small Secreted Peptides (SSPs) Finder (with Phobius)\n",
+    "\n",
+    "Check the next section to see the reproduction of the Li et al. 2014 paper about SSPs.\n",
+    "\n",
+    "The section below uses Phobius as an alternative method for SSP-discovery.\n",
+    "\n",
+    "In this case I am using the output tsv file from InterProScan but Phobius can be run in stand-alone format.\n",
+    "\n",
+    "According to the paper, SSPs are defined as:\n",
+    "1. Proteins shorter than 200aa\n",
+    "2. Containt signal peptide (using signalp)\n",
+    "3. Don't containt transmembrane helices (using TMHMM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "532911bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "InterProScan tools: ['CDD' 'SUPERFAMILY' 'Pfam' 'ProSiteProfiles' 'PANTHER' 'ProSitePatterns'\n",
+      " 'Gene3D' 'Phobius' 'MobiDBLite' 'PRINTS' 'SMART' 'Coils' 'TMHMM' 'PIRSF'\n",
+      " 'Hamap' 'TIGRFAM' 'SFLD']\n",
+      "Phobius annotations: ['CYTOPLASMIC_DOMAIN' 'NON_CYTOPLASMIC_DOMAIN' 'TRANSMEMBRANE'\n",
+      " 'SIGNAL_PEPTIDE_C_REGION' 'SIGNAL_PEPTIDE_N_REGION' 'SIGNAL_PEPTIDE'\n",
+      " 'SIGNAL_PEPTIDE_H_REGION']\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"InterProScan_results.tsv\", sep=\"\\t\", header=None)\n",
+    "\n",
+    "# First get all proteins shorter than 200aa\n",
+    "df = df[df[2]<=200]\n",
+    "\n",
+    "# Second, remove all non-Phobius annotation rows\n",
+    "print(\"InterProScan tools:\", df[3].unique())\n",
+    "phobius = df[df[3]==\"Phobius\"]\n",
+    "# We only need column 0 and 4 from now on for gene IDs and Phobius annotations\n",
+    "phobius = phobius[[0,4,5]]\n",
+    "\n",
+    "# Third, we want to filter based on \"SIGNAL_PEPTIDE\" and \"TRANSMEMBRANE\" annotations\n",
+    "print(\"Phobius annotations:\", phobius[4].unique())\n",
+    "phobius = phobius[phobius[4].isin([\"SIGNAL_PEPTIDE\", \"TRANSMEMBRANE\"])]\n",
+    "\n",
+    "# Groupby gene ID and Phobius annotation and count each value\n",
+    "phobius = phobius.groupby([0,4]).count().reset_index()\n",
+    "\n",
+    "# Find genes with a TM domain and then remove them from ones that have a signal peptide\n",
+    "selected_genes = phobius[((phobius[4]==\"TRANSMEMBRANE\") & (phobius[5]>=0))]\n",
+    "# selected_genes = phobius[((phobius[4]==\"TRANSMEMBRANE\") & (phobius[5]==1))] # if 1 TM is OK remove ~ below\n",
+    "phobius = phobius[(phobius[4]==\"SIGNAL_PEPTIDE\") & (~phobius[0].isin(selected_genes[0]))]\n",
+    "\n",
+    "# You can check that there is exactly one annotated signal sequence, not necessary\n",
+    "# phobius = phobius[phobius[5]==1]\n",
+    "\n",
+    "phobius[0].to_csv(\"ref_SSPs.txt\", header=False, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "66931750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To save the SSPs as a tsv and fasta file\n",
+    "\n",
+    "fasta_file = gzip.open(\"protein_seqs.fa.gz\", mode='rt')\n",
+    "\n",
+    "record_iterator = SeqIO.parse(fasta_file, \"fasta\")\n",
+    "od = OrderedDict()\n",
+    "\n",
+    "# Write both a fasta file and a tsv file that containt the sequences\n",
+    "# I also include a column that has the last 30aa of the protein\n",
+    "outFile = open(\"ref_SSPs.tsv\" ,\"w\")\n",
+    "outFile.write(\"GeneID\\tlast30aa\\tSequence\\n\")\n",
+    "\n",
+    "for record in record_iterator:\n",
+    "    if record.id in phobius[0].to_list():\n",
+    "        record.seq = record.seq.replace(\"*\",\"\")\n",
+    "        od[record.id] = record\n",
+    "        outFile.write(record.id+'\\t'+str(record.seq[-31:-1])+'\\t'+str(record.seq)+\"\\n\")\n",
+    "\n",
+    "with open(\"ref_SSPs.fa\", 'w') as handle:\n",
+    "    SeqIO.write(od.values(), handle, 'fasta')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "interim-virginia",
    "metadata": {},
    "source": [
-    "# Small Secreted Peptides (SSPs) Finder\n",
+    "# Small Secreted Peptides (SSPs) Finder (original method)\n",
     "\n",
     "The code below is intended to reproduce the analysis conducted in -\n",
     "Li, Y.L., Dai, X.R., Yue, X., Gao, X.-Q. and Zhang, X.S. (2014) Identification of small secreted peptides (SSPs) in maize and expression analysis of partial SSP genes in reproductive tissues. Planta, 240, 713–728. (https://pubmed.ncbi.nlm.nih.gov/25048445/)\n",
@@ -115,14 +212,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fasta_file = gzip.open(\"Zm-B73-REFERENCE-GRAMENE-4.0_Zm00001d.2.protein.longest.fa.gz\", mode='rt')\n",
+    "fasta_file = gzip.open(\"protein_seqs.fa.gz\", mode='rt')\n",
     "\n",
     "record_iterator = SeqIO.parse(fasta_file, \"fasta\")\n",
     "od = OrderedDict()\n",
     "\n",
     "# Write both a fasta file and a tsv file that containt the sequences\n",
     "# I also include a column that has the last 30aa of the protein\n",
-    "outFile = open(\"predicted_SSPs.tsv\" ,\"w\")\n",
+    "outFile = open(\"ref_SSPs.tsv\" ,\"w\")\n",
     "outFile.write(\"GeneID\\tlast30aa\\tSequence\\n\")\n",
     "\n",
     "for record in record_iterator:\n",
@@ -130,14 +227,14 @@
     "        od[record.id] = record\n",
     "        outFile.write(record.id+'\\t'+str(record.seq[-31:-1])+'\\t'+str(record.seq)+\"\\n\")\n",
     "\n",
-    "with open(\"predicted_SSPs.fa\", 'w') as handle:\n",
+    "with open(\"ref_SSPs.fa\", 'w') as handle:\n",
     "    SeqIO.write(od.values(), handle, 'fasta')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
