--- a/orthology/orthogroups_seqLogos.ipynb
+++ b/orthology/orthogroups_seqLogos.ipynb
@@ -12,12 +12,22 @@
     "import sqlite3\n",
     "import zlib\n",
     "import csv\n",
+    "import os\n",
+    "import subprocess\n",
     "from functools import reduce\n",
     "from collections import OrderedDict\n",
     "\n",
     "from Bio import SeqIO \n",
     "from Bio.SeqRecord import SeqRecord\n",
-    "from Bio.Seq import Seq"
+    "from Bio.Seq import Seq\n",
+    "from Bio import AlignIO\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "plt.ion()\n",
+    "import logomaker as lm\n"
    ]
   },
   {
@@ -175,11 +185,85 @@
     "    with open(\"fasta/\"+candidate+\".fasta\", \"w\") as handle:\n",
     "            SeqIO.write(od.values(), handle, \"fasta\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8dda3a9",
+   "metadata": {},
+   "source": [
+    "## 5. Run multiple sequence alignment using famsa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "969c6653",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for fasta in os.listdir(\"fasta\"):\n",
+    "    subprocess.run([\"famsa \"+f\"fasta/{fasta} \"+f\"aln/{fasta.replace('fasta', 'aln')}\", \"arguments\"], shell=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32cde1a4",
+   "metadata": {},
+   "source": [
+    "## 6. Generate sequence logo PDFs of all orthogroups using logomaker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "686cbf57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for aln in os.listdir(\"aln\"):\n",
+    "    seq_list = []\n",
+    "    align = AlignIO.read(\"aln/\"+aln, \"fasta\")\n",
+    "    for seq in align:\n",
+    "        seq_list.append(str(seq.seq))\n",
+    "    fig, ax = plt.subplots(figsize=(len(seqs[0])*10, 10))\n",
+    "\n",
+    "    ww_counts_df = lm.alignment_to_matrix(sequences=seq_list, to_type='counts', characters_to_ignore='.-X')\n",
+    "    logo = lm.Logo(ww_counts_df, ax=ax, color_scheme='chemistry')\n",
+    "    # weblogo_protein, skylign_protein, charge, chemistry\n",
+    "    fig.savefig(\"seqLogos/\"+aln.replace(\"aln\",\"pdf\"))# png - make smaller images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6daa8853",
+   "metadata": {},
+   "source": [
+    "## Optional: Merge all PDFs into one file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2792848c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PyPDF2 import PdfFileMerger\n",
+    "\n",
+    "pdfs = os.listdir(\"seqLogos\")\n",
+    "pdfs = [\"seqLogos/\"+pdf for pdf in pdfs]\n",
+    "merger = PdfFileMerger()\n",
+    "\n",
+    "for pdf in pdfs:\n",
+    "    merger.append(pdf)\n",
+    "merger.write(\"seqLogos.pdf\")\n",
+    "merger.close()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
