Update GWAS from scratch OLS methods

--- a/GWAS/GWAS_from_scratch/GWAS_from_scratch.ipynb
+++ b/GWAS/GWAS_from_scratch/GWAS_from_scratch.ipynb
@@ -13,9 +13,20 @@
     "import statsmodels.api as sm\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
+    "import numba\n",
+    "\n",
+    "from scipy import stats\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.pipeline import Pipeline"
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import OrdinalEncoder\n",
+    "from sklearn import datasets, linear_model\n",
+    "import statsmodels.api as sm\n",
+    "from scipy import stats\n",
+    "\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -29,7 +40,18 @@
     "hmp = hmp.replace(\"N\", np.nan)\n",
     "\n",
     "trait = pd.read_csv(\"test_trait.txt\", sep=\"\\t\", index_col=0)\n",
-    "trait.columns"
+    "trait.columns\n",
+    "\n",
+    "# Get hmp columns with existing traits\n",
+    "hmp = hmp[hmp.columns[hmp.columns.isin(trait.index)]]\n",
+    "trait = trait.loc[hmp.columns]\n",
+    "\n",
+    "hmp = hmp.T.sort_index()\n",
+    "trait = trait.sort_index()\n",
+    "\n",
+    "# Simpler than the sklearn OrdinalEncoder\n",
+    "hmp = hmp.rank(axis=0, method=\"dense\")-1\n",
+    "hmp"
    ]
   },
   {
@@ -48,12 +70,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merge genotype column and trait column in a single dataframe\n",
-    "data = pd.DataFrame(hmp.loc[\"SNP_Name\"]).join(trait[\"Trait_Name\"])\n",
-    "data.columns = [\"SNP\", \"trait\"]\n",
-    "data = pd.DataFrame(data)\n",
-    "data[\"SNP\"] = data[\"SNP\"].replace(\"N\", np.nan)\n",
-    "data = data.dropna()"
+    "# Might be interesting to use numba JIT with the custom applied functions\n",
+    "from numba import jit, njit, vectorize, float64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# So far this is the simplest and fastest GWAS GLM method I could come up with\n",
+    "# It is significantly slower compared to any published method, but it is a start\n",
+    "def test(tmp):\n",
+    "    tmp = pd.concat([tmp, trait.iloc[:,0]], axis=1).dropna()\n",
+    "    #tmp.iloc[:,0] = OrdinalEncoder().fit_transform(tmp.iloc[:,0].values.reshape(-1, 1))\n",
+    "    tmp = sm.add_constant(tmp)\n",
+    "    return(sm.OLS(tmp.iloc[:,-1], tmp.iloc[:,:2]).fit().pvalues[1])\n",
+    "\n",
+    "%time pvals = hmp.iloc[:,:1000].aggregate(test, axis=0)"
    ]
   },
   {
@@ -62,13 +99,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The bare-bone approach works and produces the same p-values but it is much slower than the simpler statsmodels\n",
+    "# https://www.cluzters.ai/forums/topic/395/find-p-value-significance-in-scikit-learn-linear-regression?c=1597\n",
+    "def test(tmp):\n",
+    "    tmp = pd.concat([tmp, trait.iloc[:,0]], axis=1).dropna()\n",
+    "    tmp = sm.add_constant(tmp)\n",
+    "    lm = linear_model.LinearRegression()\n",
+    "    X, y = tmp.iloc[:,:2], tmp.iloc[:,-1]\n",
+    "    lm.fit(X, y)\n",
+    "    params = np.append(lm.intercept_,lm.coef_[-1])\n",
+    "    predictions = lm.predict(X)\n",
+    "    MSE = (sum((y-predictions)**2))/(len(X)-2) # mean square error\n",
+    "    sd_b = np.sqrt(MSE*(np.linalg.inv(np.dot(X.T,X)).diagonal()))\n",
+    "    ts_b = params[-1] / sd_b[-1] # t statistic for each\n",
+    "    p_values = 2*(1-stats.t.cdf(np.abs(ts_b),(len(X)-1)))\n",
+    "    return(np.round(p_values,5))\n",
+    "\n",
+    "%time pvals = hmp.iloc[:,:1000].aggregate(test, axis=0)\n",
+    "#%time pvals = hmp.aggregate(test, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I use the statsmodels.OLS single SNP prediction to assess other methods\n",
+    "# Merge genotype column and trait column in a single dataframe\n",
+    "data = pd.DataFrame(hmp.T.iloc[2,:]).join(trait.iloc[:,0])\n",
+    "data.columns = [\"SNP\", \"trait\"]\n",
+    "data[\"SNP\"] = data[\"SNP\"].replace(\"N\", np.nan)\n",
+    "data = data.dropna()\n",
+    "\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
+    "trait_var = data.trait.copy()\n",
     "ordinalenc = OrdinalEncoder()\n",
     "data.SNP = ordinalenc.fit_transform(pd.DataFrame(data.SNP))\n",
-    "data = data.dropna()\n",
-    "data.SNP = sm.add_constant(data.SNP)\n",
-    "model = sm.OLS(data.trait, data.SNP).fit()\n",
+    "#data = data.dropna()\n",
+    "data = sm.add_constant(data.SNP)\n",
+    "model = sm.OLS(trait_var, data).fit()\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This correctly calculates the paramters of the least square but I am not sure I want to continue on this path\n",
+    "data = pd.concat([hmp.T.iloc[2,:],trait.iloc[:,0]], axis=1).dropna()\n",
+    "A = np.vstack([data.iloc[:,0], np.ones(len(data))]).T\n",
+    "m, c = np.linalg.lstsq(A, data.iloc[:,1], rcond=None)[0]\n",
+    "print(c, m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This also correctly calculates the paramters of the least square\n",
+    "data = pd.concat([hmp.T.iloc[2,:],trait.iloc[:,0]], axis=1).dropna()\n",
+    "data = sm.add_constant(data)\n",
+    "# https://github.com/tirthajyoti/Machine-Learning-with-Python/blob/e683fadd99ae35831fd65de1bb3569f8f751f448/Regression/Linear_Regression_Methods.ipynb\n",
+    "# https://www.freecodecamp.org/news/data-science-with-python-8-ways-to-do-linear-regression-and-measure-their-speed-b5577d75f8b/\n",
+    "# https://stackoverflow.com/questions/44659204/numpy-dot-product-with-missing-values\n",
+    "t = data.iloc[:,:2]\n",
+    "y = data.iloc[:,2]\n",
+    "m = np.dot((np.dot(np.linalg.inv(np.dot(t.T,t)),t.T)),y)\n",
+    "m"
    ]
   },
   {
@@ -170,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -184,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
