Improved seqLogos notebook

--- a/orthology/orthogroups_seqLogos.ipynb
+++ b/orthology/orthogroups_seqLogos.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "painful-container",
+   "id": "female-right",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breathing-devices",
+   "id": "stupid-place",
    "metadata": {},
    "source": [
     "## 1. Open connection to SQNce\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enclosed-intervention",
+   "id": "intended-transfer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dental-abraham",
+   "id": "satisfactory-hypothesis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fundamental-investing",
+   "id": "appreciated-memorabilia",
    "metadata": {},
    "source": [
     "## 2. Get list of candidate gemes"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "earned-disaster",
+   "id": "australian-nation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "neutral-sector",
+   "id": "hollow-profile",
    "metadata": {},
    "source": [
     "## 3. Get the Orthogroup dataframe"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "seven-devices",
+   "id": "phantom-petite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "isolated-complex",
+   "id": "special-capitol",
    "metadata": {},
    "source": [
     "## 4. Generate the orthogroup fasta and csv files"
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fallen-state",
+   "id": "moving-charleston",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "significant-boston",
+   "id": "scientific-diagram",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8dda3a9",
+   "id": "mineral-denmark",
    "metadata": {},
    "source": [
     "## 5. Run multiple sequence alignment using famsa"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "969c6653",
+   "id": "determined-headset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32cde1a4",
+   "id": "accomplished-technical",
    "metadata": {},
    "source": [
     "## 6. Generate sequence logo PDFs of all orthogroups using logomaker"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "686cbf57",
+   "id": "small-aurora",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6daa8853",
+   "id": "healthy-number",
    "metadata": {},
    "source": [
     "## Optional: Merge all PDFs into one file"
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2792848c",
+   "id": "abandoned-hormone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,11 +259,157 @@
     "merger.write(\"seqLogos.pdf\")\n",
     "merger.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "helpful-toronto",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "reserved-novelty",
+   "metadata": {},
+   "source": [
+    "# SeqLogos for long sequences - alignmed spread across multiple lines\n",
+    "* Mostly works but will add documentation and example\n",
+    "* Need to adjust the final row to be of relative-length"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "introductory-slope",
+   "metadata": {},
+   "source": [
+    "# 1. A figure for a single alignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "alpha-plant",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aln = \"gene_id\"\n",
+    "seq_list = []\n",
+    "row_len=50\n",
+    "nrows=len(seq)//row_len if len(seq)%row_len == 0 else len(seq)//row_len+1\n",
+    "align = AlignIO.read(\"145aln/\"+aln, \"fasta\")\n",
+    "fig, ax = plt.subplots(figsize=(11.69,0.5*nrows), nrows=nrows, ncols=1)#figsize=(len(seqs[0])*10, 10))\n",
+    "for row in range(nrows):\n",
+    "    seq_list = []\n",
+    "    for seq in align:\n",
+    "        row_end = row_len*(row+1)\n",
+    "        row_end = row_end if len(seq)>row_end else len(seq) \n",
+    "        seq_list.append(str(seq.seq)[row_len*row:row_end]) #change 0 to n to get the C-terminus regiononly\n",
+    "    ww_counts_df = lm.alignment_to_matrix(sequences=seq_list, to_type='counts', characters_to_ignore='.-X')\n",
+    "    crop=False\n",
+    "    # Crop positions based on counts\n",
+    "    # filter base on counts (manually change True/False to apply cropping or not)\n",
+    "    if crop:\n",
+    "        num_seqs = ww_counts_df.sum(axis=1)\n",
+    "        pos_to_keep = num_seqs > 2 #len(seqs)/2\n",
+    "        ww_counts_df = ww_counts_df[pos_to_keep]\n",
+    "        ww_counts_df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "    try:\n",
+    "        logo = lm.Logo(ww_counts_df, ax=ax[row], color_scheme='chemistry')\n",
+    "    except:\n",
+    "        print(align, \"failed.\")\n",
+    "    # weblogo_protein, skylign_protein, charge, chemistry\n",
+    "\n",
+    "    # The title is not text-searchable so not very helpful when merging all PDFs, but the margin is nice\n",
+    "    #ax.set_title(\"Sequence Logo\")#aln.replace(\".aln\",\"\")) \n",
+    "    fig.text(0,0.5, aln.replace(\".aln\",\"\"), size=8)    \n",
+    "fig.savefig(name+\"/\"+aln.replace(\"aln\",\"pdf\"), bbox_inches='tight')# png - make smaller images\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "creative-miami",
+   "metadata": {},
+   "source": [
+    "# 2. A figure for multiple alignments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "precise-inventory",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"project_name\"\n",
+    "crop = True\n",
+    "if \"cropped\" in name:\n",
+    "    n = 60\n",
+    "else:\n",
+    "    n = 0\n",
+    "crop = False\n",
+    "    \n",
+    "folder_name = name+\"aln\"\n",
+    "os.system(\"mkdir \" + name)\n",
+    "for aln in os.listdir(folder_name):\n",
+    "    seq_list = []\n",
+    "    row_len=50\n",
+    "    \n",
+    "    align = AlignIO.read(folder_name+\"/\"+aln, \"fasta\")\n",
+    "    seq_len = align.get_alignment_length()\n",
+    "    nrows=seq_len//row_len if seq_len%row_len == 0 else seq_len//row_len+1\n",
+    "    fig, ax = plt.subplots(figsize=(11.69,0.5*nrows), nrows=nrows, ncols=1)#figsize=(len(seqs[0])*10, 10))\n",
+    "    \n",
+    "    for row in range(nrows):\n",
+    "        seq_list = []\n",
+    "        for seq in align:\n",
+    "            row_end = row_len*(row+1)\n",
+    "            row_end = row_end if seq_len>row_end else seq_len\n",
+    "            seq_list.append(str(seq.seq)[row_len*row:row_end]) #change 0 to n to get the C-terminus regiononly\n",
+    "        ww_counts_df = lm.alignment_to_matrix(sequences=seq_list, to_type='counts', characters_to_ignore='.-X')\n",
+    "        \n",
+    "        crop=False\n",
+    "        # Crop positions based on counts\n",
+    "        # filter base on counts (manually change True/False to apply cropping or not)\n",
+    "        if crop:\n",
+    "            num_seqs = ww_counts_df.sum(axis=1)\n",
+    "            pos_to_keep = num_seqs > 2 #len(seqs)/2\n",
+    "            ww_counts_df = ww_counts_df[pos_to_keep]\n",
+    "            ww_counts_df.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "        try:\n",
+    "            logo = lm.Logo(ww_counts_df, ax=ax[row], color_scheme='chemistry')\n",
+    "        except:\n",
+    "            print(align, \"failed.\")\n",
+    "        # weblogo_protein, skylign_protein, charge, chemistry\n",
+    "\n",
+    "        # The title is not text-searchable so not very helpful when merging all PDFs, but the margin is nice\n",
+    "        #ax.set_title(\"Sequence Logo\")#aln.replace(\".aln\",\"\")) \n",
+    "    fig.text(0,0.5, aln.replace(\".aln\",\"\"), size=8)   \n",
+    "    fig.text(0,0.4, str(len(align))+\" sequences\", size=8)   \n",
+    "    fig.savefig(name+\"/\"+aln.replace(\"aln\",\"pdf\"), bbox_inches='tight')# png - make smaller images\n",
+    "    #plt.show()\n",
+    "    plt.close()\n",
+    "\n",
+    "# Merge all the PDF figures\n",
+    "pdfs = os.listdir(name)\n",
+    "pdfs = [name+\"/\"+pdf for pdf in pdfs]\n",
+    "    \n",
+    "merger = PdfFileMerger()\n",
+    "\n",
+    "for pdf in pdfs:\n",
+    "    merger.append(pdf)\n",
+    "merger.write(name+\".pdf\")\n",
+    "merger.close()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -277,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
