Updated GWAS from scratch mean-based method

--- a/GWAS/GWAS_from_scratch/GWAS_from_scratch.ipynb
+++ b/GWAS/GWAS_from_scratch/GWAS_from_scratch.ipynb
@@ -14,6 +14,7 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "import numba\n",
+    "import seaborn as sns\n",
     "\n",
     "from scipy import stats\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -23,7 +24,7 @@
     "from sklearn import datasets, linear_model\n",
     "import statsmodels.api as sm\n",
     "from scipy import stats\n",
-    "\n",
+    "from scipy.stats import f\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -58,8 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. OLS GWAS\n",
-    "\n",
+    "# 1. GWAS using OLS\n",
     "Currently only implemented for a single SNP but the result match TASSEL GLM output for the tested SNP.\\\n",
     "Thia is also likely to be too slow to calculate the test statistics for thousands of SNPs."
    ]
@@ -77,6 +77,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp = hmp.iloc[:,0]\n",
+    "tmp = pd.concat([tmp, trait.iloc[:,0]], axis=1).dropna()\n",
+    "tmp = sm.add_constant(tmp)\n",
+    "ols = sm.OLS(tmp.iloc[:,-1], tmp.iloc[:,:2]).fit()\n",
+    "ols.compare_lr_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ols.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -88,9 +110,12 @@
     "    tmp = pd.concat([tmp, trait.iloc[:,0]], axis=1).dropna()\n",
     "    #tmp.iloc[:,0] = OrdinalEncoder().fit_transform(tmp.iloc[:,0].values.reshape(-1, 1))\n",
     "    tmp = sm.add_constant(tmp)\n",
+    "    print(sm.OLS(tmp.iloc[:,-1], tmp.iloc[:,:2]).fit())\n",
     "    return(sm.OLS(tmp.iloc[:,-1], tmp.iloc[:,:2]).fit().pvalues[1])\n",
     "\n",
-    "%time pvals = hmp.iloc[:,:1000].aggregate(test, axis=0)"
+    "#%time pvals = hmp.iloc[:,:1000].aggregate(test, axis=0)\n",
+    "pvals = hmp.iloc[:,0].aggregate(test, axis=0)\n",
+    "pvals"
    ]
   },
   {
@@ -174,10 +199,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multiple Regression Model: https://online.stat.psu.edu/stat462/node/132/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Calculate Distance Matrix\n",
+    "# 2. GWAS using mean values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.linregress(trait_joined[trait_joined.columns[0]],trait_joined[trait_joined.columns[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://stats.stackexchange.com/questions/256726/linear-regression-what-does-the-f-statistic-r-squared-and-residual-standard-err\n",
+    "trait_joined = pd.concat([hmp[\"ss1_3498\"], trait], axis=1).dropna()\n",
+    "group = trait_joined.groupby(\"ss1_3498\")\n",
+    "# Calculate sums of squares (total, residual and model)\n",
+    "ss_total = trait_joined.iloc[:,1].var() * len(trait_joined) #sum((y-ybar)^2)\n",
+    "ss_residual = (group.var()*group.count()).sum() #sum((y-m1$fitted)^2)\n",
+    "ss_model = ss_total - ss_residual\n",
+    "\n",
+    "# Calculate degrees of freedom (total, residual and model)\n",
+    "n = len(trait_joined)\n",
+    "k = 2 # k = model parameter: b0, b1\n",
+    "df_total = n-1\n",
+    "df_residual = n-k\n",
+    "df_model = k-1\n",
+    "\n",
+    "# Calculate mean squares (note that these are just variances)\n",
+    "ms_residual = ss_residual / df_residual\n",
+    "ms_model = ss_model / df_model\n",
+    "\n",
+    "F = ms_model / ms_residual\n",
+    "print(\"F:\", F)\n",
+    " \n",
+    "##### F value is still different from the OLS method and I need to find the source of the error    \n",
+    "\n",
+    "p = 2*(1-f.cdf(F, df_model, df_residual)) #find p-value of F test statistic \n",
+    "print(\"P:\", p[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. GWAS using GLM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# An example of GLM with statsmodels: https://stackoverflow.com/questions/42277532/python-negative-binomial-regression-results-dont-match-those-from-r\n",
+    "# Generalized Linear Models in R: http://users.stat.umn.edu/~helwig/notes/generalized-linear-models.html\n",
+    "# General linear model in Python and C: https://www.mindyourdata.org/posts/general-linear-model-in-python-and-c/\n",
+    "# Documentation: https://www.statsmodels.org/stable/generated/statsmodels.genmod.generalized_linear_model.GLM.html\n",
+    "# py-glm: Generalized Linear Models in Python: https://github.com/madrury/py-glm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Calculate Distance Matrix\n",
     "\n",
     "https://bitbucket.org/tasseladmin/tassel-5-source/wiki/UserManual/DistanceMatrix/DistanceMatrix \\\n",
     "https://davetang.org/muse/2015/07/24/dna-sequencing-data/ \\\n",
@@ -286,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
