--- a/genomes/Proteomes/primary2locus.ipynb
+++ b/genomes/Proteomes/primary2locus.ipynb
@@ -66,7 +66,7 @@
     "        for ls in locus:\n",
     "            if \"locus\" in ls:\n",
     "                locus = ls[6:]\n",
-    "        od[locus] = SeqRecord(Seq(seq.seq), id=locus, name=\"\", description=\"\")  \n",
+    "        od[locus] = SeqRecord(Seq(seq.seq).replace(\"*\",\"\"), id=locus, name=\"\", description=\"\")  \n",
     "    with open(fl[:-6]+\".locus.fa\", 'w') as handle:\n",
     "        SeqIO.write(od.values(), handle, 'fasta')\n",
     "    os.system(\"gzip \" + fl[:-6]+\".locus.fa\")"
